--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
-}
+ 
+   
+   
+   
+   
+   
+   body{
+     font-family:Noto Sans;
+      
+      
+   }
+   .container{
+       
+       justify-content: center !important;
+       margin-left: 700px;
+       margin-top: 100px;
+   }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+   
+   .tags{
+     font-weight: 700 !important;
+     font-size: 12.8px !important;
+     margin: 10px 0px;
+   }
+   .time{
+    color:#606060;
+    font-size:14px;
+    line-height: 19px;
+    margin: 10px 0px;
+   }
+  
+   .multiSelectContainer input {
+     margin-top: 0px !important;
+     padding: 10px 10px;
+    background: transparent;
+     
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .searchBox {
+    border: none;
+    font-size: 14px !important;
+    min-height: 0px !important;
+    line-height: 170%;
   }
-  to {
-    transform: rotate(360deg);
+    .searchBox {  
+      border: none;
+      font-size: 10px;
+      min-height: 50px;
+    }
+    .inputField {  
+        margin: 5px;
+    }
+    .chips {  
+      background: rgb(121, 98, 98);
+    }
+    .optionContainer {  
+      border: 2px solid;
+      background-color:white;
+    }
+    .option{ 
+      color:black;
+    }
+    .groupHeading{  
+    color: black;
+    }
+    .searchWrapper {
+      border: 1px solid #ccc;
+       
+      padding: 10px 20px;
+       
+       
+      position:relative;
+  width: 489px;
+  height: 104px;
+  left: 0px;
+   
+  
+  background: #EBEBEB;
+  box-shadow: inset 0px -2px 0px #33A4FF !important;
+  border-radius: 2px;
   }
+  
+  .searchWrapper:hover {
+    border: 2px solid #33A4FF !important ;
+  }
+  
+   
+  .chip {
+    padding: 4px 10px;
+    background: white;
+  border-radius: 2px !important;
+    margin-right: 5px;
+    margin-bottom: 5px;
+     
+  height: 40px;
+  
+   
+    display: inline-flex;
+    align-items: center;
+    font-size: 13px;
+    line-height: 19px;
+    color:#383838;
+  }
+  .closeIcon {
+    height: 13px;
+    width: 13px;
+    float: right !important;
+    margin-left: 5px;
+    
+    cursor: pointer;
+    background:#383838 !important;
+    border: none !important;
+    
+  }
+  .highlightOption {
+    background: #EBF6FF;
+    width:489px ;
+
+    
+  }
+  .highlightOption:hover {
+    background: #EBF6FF !important;
+    color: #383838 !important;
+    
+  }
+  .optionListContainer {
+    position: absolute;
+    width: 489px;
+    background: #fff;
+    border-radius: 4px;
+    margin-top: 1px;
+    z-index: 2;
+    display: block;
+    border: 1px solid #EBEBEB;
+/* box-sizing: border-box; */
+box-shadow: 1px 1px 1px;
+}
+.multiSelectContainer ul {
+    display: block;
+    padding: 0;
+    margin: 0;
+    border:none !important;
+    border-radius: 4px;
+    max-height: 250px;
+    overflow-y: hidden !important;
+    overflow-x: hidden !important;
 }
